--- a/style.css
+++ b/style.css
@@ -2,64 +2,117 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-  /*  overflow: hidden;*/
 }
+
 body{
     position: relative;
-    background-color: #000000;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
+    background-color:#0E0E0FFF;
+}
+
+.parallax {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.bg1, .bg2 {
+  position: absolute;
+  width: 100%;
+  height: 200%;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg1 {
+  background-image: url('/img/background1.png');
+  animation: parallax1 5s linear infinite;
+}
+
+.bg2 {
+  background-image: url('./img/background2.png');
+  animation: parallax2 1s linear infinite;
+}
+
+#canvas{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     max-width: 100vw;
     max-height: 100vh;
 }
 
-#canvas{
-   position: absolute;
-   width: 100vw;
-   height: 100vh;
-}
-#game-board{
-    position: relative;
+#interface{
+    position: absolute;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    max-width: 100vw;
+    max-height: 100vh;
+    
 }
+
 #b-left{
+    border: none;
     position: absolute;
-    background:transparent;
-    width: 20vw;
+    width: 17,78vw;
     height: 10vh;
-    bottom: 0;
-    cursor: pointer;
+    bottom: 0px;
+    right: 20%;
+    opacity: 0.3;
+    /*transition: opacity 0.5s ease-in-out*/
 }
+
 #b-right{
+    border: none;
     position: absolute;
-    background:transparent;
-    width: 20vw;
+    width: 17,78vw;
     height: 10vh;
-    bottom: 0;
+    bottom: 0px;
+    right: 0px;
+    opacity: 0.3;
+}
+
+#b-shot{
+    border: none;
+    position: absolute;
+    width: 17,78vw;
+    height: 10vh;
+    top: 0px;
     right: 0%;
-    cursor: pointer;
+    opacity: 0.5;
 }
-
-#b-tiro{
+#b-ult{
+    border: none;
     position: absolute;
-    background:transparent;
-    width: 20vw;
-    height: 10vh;
-    bottom: 0;
-    right: 40%;
-    cursor: pointer;
+    width: 13.3vw;
+    height: 7.5vh;
+    top: 0px;
+    right: 20%;
+    opacity: 0.3;
 }
 
 
-#b-pause{
-    position: absolute;
-    background:transparent;
-    width: 5vw;
-    height: 5vh;
-    top: 0;
-    left: 0;
-    cursor: pointer;
+@keyframes parallax1 {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 
-
-
+@keyframes parallax2 {
+  from {
+    transform: translateY(-50%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
